--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,12 @@
     "keywords": ["captcha", "security", "image captcha"],
     "homepage": "https://github.com/liqingbao/phpcatpcha.git",
     "license": "MIT",
+    "minimum-stability": "dev",
+    "autoload": {
+        "psr-4": {
+            "": "/src"
+        }
+    },
     "require": {
         "php": ">=5.3.0",
         "ext-gd": "*",
