--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Ks\\captcha\\": "src/"
+            "Ks\\": "src/"
         }
     },
     "require": {
